# MAI-Informational-retrieval

./: CMakeLists.txt  Dockerfile  README.md  config.yaml  crawler.py  docker-compose.yml
include/: index_format.hpp  indexer.hpp  query_parser.hpp  searcher.hpp  stemmer.hpp  tokenizer.hpp  web_server.hpp  zipf_analyzer.hpp
src/: index_format.cpp  indexer.cpp  main.cpp  main_indexer.cpp  main_search.cpp  main_web.cpp  mongodb_client.cpp  query_parser.cpp  searcher.cpp  stemmer.cpp  tokenizer.cpp  web_server.cpp  zipf_analyzer.cpp
